VPCecs.json
{
  "Description": " dev Account",
  "Parameters": {
    "EnvironmentName": {
      "Description": "An environment name that will be prefixed to resource names",
      "Type": "String"
    },
    "VpcCIDR": {
      "Description": "VPC CIDR BLOCK",
      "Type": "String",
      "Default":"10.10.10.0/16"
    },
    "PublicSubnet1CIDR": {
      "Description": " public subnet in the first Availability Zone",
      "Type": "String",
      "Default": "10.10.20.0/24"
    },
    "PublicSubnet1CIDRAZ" : {
        "Type" : "String",
        "Default" : "us-east-1a"

    },
    "PublicSubnet2CIDR": {
      "Description": " public subnet2 in the second Availability Zone",
      "Type": "String",
      "Default": "10.10.30.0/24"
    },
    "PublicSubnet2CIDRAZ" : {
        "Type" : "String",
        "Default" : "us-east-1b"

    },
    "PrivateSubnet1CIDR": {
      "Description": "private subnet1 in the first Availability Zone",
      "Type": "String",
      "Default": "10.10.60.0/24"
    },
    "PrivateSubnet1CIDRAZ" : {
        "Type" : "String",
        "Default" : "us-east-1a"

    },
    "PrivateSubnet2CIDR": {
      "Description": " private subnet2 in the second Availability Zone",
      "Type": "String",
      "Default": "10.10.70.0/24"
    },
    "PrivateSubnet2CIDRAZ" : {
        "Type" : "String",
        "Default" : "us-east-1b"

    }
  },
  "Resources": {
    "MyVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": 	{ "Ref": "VpcCIDR"  },
        "EnableDnsHostnames": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "EnvironmentName"
          }
        ]
      }
    },
    "InternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "EnvironmentName"
          }
        ]
      }
    },
    "InternetGatewayAttachment": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "InternetGatewayId":  {"Ref" : "InternetGateway"},
        "VpcId": { "Ref": "MyVPC"  }
      }
    },
    "PublicSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "MyVPC"  },
        "AvailabilityZone":  { "Ref": "PublicSubnet1CIDRAZ"  },
        "CidrBlock":  { "Ref": "PublicSubnet1CIDR"  },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "Public Subnet (AZ1)"
          }
        ]
      }
    },
    "PublicSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "MyVPC"  },
        "AvailabilityZone":  { "Ref": "PublicSubnet2CIDRAZ"  },
        "CidrBlock":  { "Ref": "PublicSubnet2CIDR"  },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "Name",
            "Value": "Public Subnet (AZ2)"
          }
        ]
      }
    },
    "PrivateSubnet1": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "MyVPC"  },
        "AvailabilityZone":  { "Ref": "PrivateSubnet1CIDRAZ"  },
        "CidrBlock":  { "Ref": "PrivateSubnet1CIDR"  },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value": "Private Subnet (AZ1)"
          }
        ]
      }
    },
    "PrivateSubnet2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": { "Ref": "MyVPC"  },
        "AvailabilityZone":  { "Ref": "PrivateSubnet2CIDRAZ"  },
        "CidrBlock":  { "Ref": "PrivateSubnet2CIDR"  },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "Name",
            "Value":  "Private Subnet (AZ2)"
          }
        ]
      }
    },
    "PublicRouteTable": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId":  {"Ref" : "MyVPC"},
        "Tags": [
          {
            "Key": "Name",
            "Value":  {"Ref" : "EnvironmentName"}
          }
        ]
      }
    },
    "DefaultPublicRoute": {
        "Type": "AWS::EC2::Route",
        "DependsOn": "InternetGatewayAttachment",
        "Properties": {
          "RouteTableId": {"Ref" : "PublicRouteTable"},
          "DestinationCidrBlock": "0.0.0.0/0",
          "GatewayId": {"Ref" :"InternetGateway" }
        }
      },
    "PublicSubnet1RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {"Ref" : "PublicRouteTable"},
        "SubnetId":{"Ref" : "PublicSubnet1"}
      }
    },
    "PublicSubnet2RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {"Ref" : "PublicRouteTable"},
        "SubnetId": {"Ref" : "PublicSubnet2"}
      }
    },
    "PrivateRouteTable1": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId":  {"Ref" : "MyVPC"},
        "Tags": [
          {
            "Key": "Name",
            "Value": "Private Routes (AZ1)"
          }
        ]
      }
    },
    "PrivateSubnet1RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId":  {"Ref" : "PrivateRouteTable1" },
        "SubnetId":  {"Ref" : "PrivateSubnet1" }
      }
    },
    "PrivateRouteTable2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {"Ref" : "MyVPC"},
        "Tags": [
          {
            "Key": "Name",
            "Value": " Private Routes (AZ2)"
          }
        ]
      }
    },
    "PrivateSubnet2RouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId":  {"Ref" : "PrivateRouteTable2" },
        "SubnetId":  {"Ref" : "PrivateSubnet2" }
      }
    },
    "NatGateway1EIP": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": "InternetGatewayAttachment",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "NatGateway2EIP": {
      "Type": "AWS::EC2::EIP",
      "DependsOn": "InternetGatewayAttachment",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "DefaultPrivateRoute2": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "NatGateway2",
      "Properties": {
        "RouteTableId": {"Ref" : "PrivateRouteTable2" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {"Ref" : "NatGateway2" }
      }
    },
    "DefaultPrivateRoute1": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "NatGateway1",
      "Properties": {
        "RouteTableId": {"Ref" : "PrivateRouteTable1" },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {"Ref" : "NatGateway1" }
      }
    },
    "NatGateway1": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": { "Fn::GetAtt" : ["NatGateway1EIP", "AllocationId"]},
        "SubnetId": {"Ref" : "PublicSubnet1"} 
      }
    },
    "NatGateway2": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "AllocationId": { "Fn::GetAtt" : ["NatGateway2EIP", "AllocationId"]},
        "SubnetId": {"Ref" : "PublicSubnet2"}
      }
    }
  }
}
